--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -19,7 +19,7 @@
   background-position: center center
   background-size: cover
   background-attachment: fixed
-  padding-bottom: 55px
+  // padding-bottom: 55px
   border-bottom: 1px solid $dark-color
   position: relative
   &__title 
@@ -129,4 +129,12 @@
               transform: translate( 5px , 0 ) rotate( 45deg )
             &:after
               transform: translate( -5px , 0 ) rotate( -45deg )
+
+          
+
+@media (max-width: 1150px)
+  .steps 
+    &__title 
+      margin-bottom: 40px
+      
 
