--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -1,4 +1,5 @@
 .edge
+  padding-bottom: 0
   &__title 
     margin-bottom: 85px
   &-cards
@@ -10,16 +11,20 @@
     align-items: flex-start
     width: 48%
     &__image 
-      margin-top: 20px
+      // margin-top: 20px
       font-size: 42px
       width: 7%
     &__content 
       width: 93%
     &__title 
       text-transform: uppercase
+      margin: 0
+      margin-bottom: 15px
     &__text  
       line-height: 1.55
       color: $dark-color
+      margin: 0
+      margin-bottom: 30px
   &-main
     margin-top: 50px
     padding: 15px
@@ -34,5 +39,18 @@
       margin: auto
       text-align: center
       line-height: 1.55
+    
+@media (max-width: 1150px)
+  .edge
+    padding-bottom: 0
+    &__title 
+      margin-bottom: 60px
+    &-card 
+      &__title 
+        font-size: 20px
+        margin-bottom: 10px
+      // &__text 
+      //   margin-bottom: 20px
+  
     
 
