--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,15 +10,20 @@
   &-logo 
     width: 80px
     cursor: pointer
+  &_title 
+    margin-left: 150px
   &-social
     &__list 
-      display: flex
-      justify-content: center
-      list-style: none
       margin-top: 0
-      padding: 0
     &__item 
-      font-size: 46px
       margin-right: 25px
-      a 
-        color: $light-color
+
+@media (max-width: 1300px)
+  .footer 
+    &_title 
+      display: none
+
+@media (max-width: 950px)
+  .footer 
+    &-social 
+      margin-right: 20px
