--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,7 +1,6 @@
 .hero
   margin-top: -80px
   min-height: 700px
-  height: 100vh
   overflow: hidden
   position: relative
   width: 100%
@@ -15,6 +14,17 @@
     bottom: 10px
     right: 15px
     opacity: 0.6
+
+@media (min-width: 1150px) 
+  .hero 
+    height: 100vh 
+
+@media (max-width: 1150px)
+  .hero
+    min-height: 0
+    &-logo 
+      width: 80px
+
 
 
   // &-slider 
