--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -94,6 +94,14 @@ input.error
     &__item 
       font-size: 40px
 
+@media (max-width: 750px)
+  .arrow 
+    a 
+      width: 30px
+    
+  .title 
+    font-size: 30px
+  
 
 // HOVER ЭФФЕКТЫ 
 @media (min-width: 992px)
