--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -1,8 +1,6 @@
 .contacts
-  // background-color: #1f1b18
   background-color: $dark-color
   color: $light-color
-  // padding-bottom: 55px
   &-wrap 
     display: flex
   &__image 
@@ -97,6 +95,9 @@
   .contacts 
     &__image 
       display: none
+    &-info 
+      width: 100%
+      padding-left: 0
 
 
 
