--- a/sass/blocks/_follow.sass
+++ b/sass/blocks/_follow.sass
@@ -31,3 +31,8 @@
         border-radius: 100%
         transform: translate(-50%, -50%)
         opacity: 0
+
+@media (max-width: 750px)
+  .follow 
+    &__title 
+      margin-top: 0px
