--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -27,3 +27,11 @@
   .footer 
     &-social 
       margin-right: 20px
+
+@media (max-width: 750px)
+  .footer 
+    padding: 10px 0
+    &-social 
+      margin-right: 25px
+      &__item 
+        margin-right: 15px
