--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -57,3 +57,13 @@
       display: none
     &-burger 
       display: block
+
+@media (max-width: 750px)
+  .header
+    margin-top: 0px
+    &:before
+      background-color: $dark-color
+      top: 0
+      height: 66px
+    &-logo 
+      width: 60px
