--- a/sass/blocks/_info.sass
+++ b/sass/blocks/_info.sass
@@ -39,3 +39,17 @@
       width: 30%
     &__text 
       +thin
+
+@media (max-width: 750px)
+  .info 
+    &__title 
+      margin-bottom: 10px
+    &__subtitle 
+      margin-top: 0
+      font-size: 16px
+      +thin
+    &__card 
+      width: 45%
+      margin-bottom: 30px
+    &__image 
+      margin-bottom: 5px
