--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -49,8 +49,18 @@
       &__title 
         font-size: 20px
         margin-bottom: 10px
-      // &__text 
-      //   margin-bottom: 20px
+
+@media (max-width: 750px)
+  .edge 
+    &-card 
+      width: 100%
+    &-main 
+      &__text 
+        font-size: 20px
+
+
+
+
   
     
 
