--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -25,6 +25,12 @@
     &-logo 
       width: 80px
 
+@media (max-width: 750px)
+  .hero
+    margin-top: 0px
+    &-logo 
+      width: 60px  
+    
 
 
   // &-slider 
