--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -135,6 +135,14 @@
 @media (max-width: 1150px)
   .steps 
     &__title 
-      margin-bottom: 40px
+      margin-bottom: 30px
+
+@media (max-width: 750px)
+  .steps 
+    &__title 
+      margin-bottom: 0px
+    &__subtitle 
+      font-size: 20px
+
       
 
