--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -31,7 +31,7 @@ a
   text-transform: uppercase
   text-align: center
   font-family: 'SONGER Grotesque Bold'
-  letter-spacing: 4pxs
+  letter-spacing: 4px
 
 .page-title 
   letter-spacing: 4.5px
@@ -98,9 +98,13 @@ input.error
   .arrow 
     a 
       width: 30px
-    
   .title 
-    font-size: 30px
+    font-size: 28px
+
+@media (max-width: 550px)
+  .section
+    padding-top: 10px
+    padding-bottom: 10px
   
 
 // HOVER ЭФФЕКТЫ 
