--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -13,6 +13,7 @@
     text-align: center
   &__title 
     margin-bottom: 50px
+    font-family: 'SONGER Grotesque'
   &-phone, &-email
     margin-bottom: 10px
     a 
