--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -29,7 +29,9 @@
   .hero
     margin-top: 0px
     &-logo 
-      width: 60px  
+      display: none
+    &-arrow 
+      display: none  
     
 
 
