--- a/sass/blocks/_portfolio.sass
+++ b/sass/blocks/_portfolio.sass
@@ -58,3 +58,13 @@
     &-card 
       max-width: 250px
       margin: 5px
+
+@media (max-width: 550px)
+  .portfolio 
+    &-cards 
+      padding-top: 10px
+      height: 3070px
+      // height: 5200px
+    &-card 
+      max-width: 100%
+      margin: 5px 0
