--- a/sass/blocks/_edge.sass
+++ b/sass/blocks/_edge.sass
@@ -11,7 +11,6 @@
     align-items: flex-start
     width: 48%
     &__image 
-      // margin-top: 20px
       font-size: 42px
       width: 7%
     &__content 
@@ -42,7 +41,6 @@
     
 @media (max-width: 1150px)
   .edge
-    padding-bottom: 0
     &__title 
       margin-bottom: 60px
     &-card 
@@ -52,11 +50,39 @@
 
 @media (max-width: 750px)
   .edge 
+    &__title 
+      margin-bottom: 48px
     &-card 
       width: 100%
     &-main 
       &__text 
         font-size: 20px
+
+@media (max-width: 550px)
+  .edge 
+    &__title 
+      margin-bottom: 28px
+    &-card 
+      justify-content: center
+      &:last-child 
+        .edge-card__text
+          border-bottom: none
+      &__title 
+        text-align: center
+        font-size: 16px
+      &__text 
+        text-align: center
+        font-size: 14px
+        border-bottom: 1px solid $dark-color
+        margin-bottom: 15px 
+        padding-bottom: 15px
+      &__image 
+        display: none
+    &-main 
+      margin-top: 0
+      &__text 
+        width: 100% 
+        font-size: 16px
 
 
 
