--- a/sass/blocks/_info.sass
+++ b/sass/blocks/_info.sass
@@ -53,3 +53,19 @@
       margin-bottom: 30px
     &__image 
       margin-bottom: 5px
+
+@media (max-width: 750px)
+  .info 
+    &__subtitle 
+      margin-bottom: 28px
+    &__card 
+      width: 100%
+      flex-direction: row 
+      align-items: center
+    &__text 
+      text-align: left
+    &__image 
+      margin-right: 10px
+      font-size: 36px
+      width: 45px
+
