--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -105,6 +105,10 @@ input.error
   .section
     padding-top: 10px
     padding-bottom: 10px
+
+  .social 
+    &__item 
+      font-size: 36px
   
 
 // HOVER ЭФФЕКТЫ 
