--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -83,7 +83,7 @@
     &__title 
       font-size: 36px
     &__image
-      display: flex
+      align-self: center
     &-social 
       &__item 
         margin-right: 15px
