--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -35,3 +35,12 @@
       margin-right: 25px
       &__item 
         margin-right: 15px
+
+@media (max-width: 550px)
+  .footer 
+    &-social 
+      margin-right: 0
+      &__list
+        flex-wrap: wrap 
+        max-width: 150px
+        justify-content: flex-start
