--- a/sass/blocks/_portfolio.sass
+++ b/sass/blocks/_portfolio.sass
@@ -63,8 +63,27 @@
   .portfolio 
     &-cards 
       padding-top: 10px
-      height: 3070px
+      height: 3930px
       // height: 5200px
     &-card 
       max-width: 100%
       margin: 5px 0
+
+@media (max-width: 375px)
+  .portfolio 
+    &-cards 
+      padding-top: 10px
+      height: 3570px
+    &-card 
+      max-width: 100%
+      margin: 5px 0
+
+@media (max-width: 360px)
+  .portfolio 
+    &-cards 
+      height: 3430px
+
+@media (max-width: 320px)
+  .portfolio 
+    &-cards 
+      height: 3070px
