--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,9 @@ input.error {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+  .social__item {
+    font-size: 36px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -1324,10 +1327,27 @@ input.error {
   }
 }
 
+@media (max-width: 992px) {
+  .up {
+    opacity: 1;
+  }
+}
+
 @media (max-width: 750px) {
   .up {
     right: 15px;
     bottom: 40px;
+  }
+}
+
+@media (max-width: 550px) {
+  .up {
+    right: 40px;
+    bottom: 23px;
+    width: 34px;
+    height: 34px;
+    border-radius: 34px;
+    font-size: 20px;
   }
 }
 
@@ -1825,10 +1845,17 @@ input.error {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 550px) {
   .steps__subtitle {
     font-size: 16px;
     text-align: left;
+  }
+  .steps-text {
+    text-align: left;
+    padding: 0 10px;
+  }
+  .steps-text__item {
+    width: 100%;
   }
 }
 
@@ -1936,9 +1963,18 @@ input.error {
     text-align: left;
   }
   .info__image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-right: 10px;
     font-size: 36px;
-    width: 45px;
+    min-width: 45px;
   }
 }
 
@@ -2033,11 +2069,34 @@ input.error {
 @media (max-width: 550px) {
   .portfolio-cards {
     padding-top: 10px;
-    height: 3070px;
+    height: 3930px;
   }
   .portfolio-card {
     max-width: 100%;
     margin: 5px 0;
+  }
+}
+
+@media (max-width: 375px) {
+  .portfolio-cards {
+    padding-top: 10px;
+    height: 3570px;
+  }
+  .portfolio-card {
+    max-width: 100%;
+    margin: 5px 0;
+  }
+}
+
+@media (max-width: 360px) {
+  .portfolio-cards {
+    height: 3430px;
+  }
+}
+
+@media (max-width: 320px) {
+  .portfolio-cards {
+    height: 3070px;
   }
 }
 
@@ -2130,9 +2189,6 @@ input.error {
 }
 
 @media (max-width: 750px) {
-  .follow__title {
-    margin-top: 0px;
-  }
   .follow-slider__image {
     -webkit-filter: grayscale(0);
             filter: grayscale(0);
@@ -2270,9 +2326,9 @@ input.error {
     font-size: 36px;
   }
   .contacts__image {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
   .contacts-social__item {
     margin-right: 15px;
@@ -2352,6 +2408,20 @@ input.error {
   }
   .footer-social__item {
     margin-right: 15px;
+  }
+}
+
+@media (max-width: 550px) {
+  .footer-social {
+    margin-right: 0;
+  }
+  .footer-social__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 150px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
