--- a/sass/_up.sass
+++ b/sass/_up.sass
@@ -18,11 +18,25 @@
     align-items: center
     justify-content: center 
 
+
 @media (max-width: 1350px)
   .up 
     right: 20px
+
+@media (max-width: 992px)
+  .up 
+    opacity: 1
 
 @media (max-width: 750px)
   .up 
     right: 15px
     bottom: 40px
+
+@media (max-width: 550px)
+  .up 
+    right: 40px
+    bottom: 23px
+    width: 34px
+    height: 34px
+    border-radius: 34px
+    font-size: 20px
