--- a/sass/blocks/_info.sass
+++ b/sass/blocks/_info.sass
@@ -65,7 +65,10 @@
     &__text 
       text-align: left
     &__image 
+      display: flex
+      align-items: center
+      justify-content: center
       margin-right: 10px
       font-size: 36px
-      width: 45px
+      min-width: 45px
 
