--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -144,11 +144,17 @@
     &__subtitle 
       font-size: 20px
 
-@media (max-width: 750px)
+@media (max-width: 550px)
   .steps 
     &__subtitle 
       font-size: 16px
       text-align: left
+    &-text 
+      text-align: left
+      padding: 0 10px
+      &__item 
+        width: 100%
+    
 
       
 
