--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,8 @@
 @import 'blocks/contacts'
 // Импорт стилей футера
 @import 'blocks/footer'
+// Импорт стилей футера
+@import 'blocks/menu-mobile'
 
 
 // Импорт стилей главного слайдера hero 
