--- a/css/style.css
+++ b/css/style.css
@@ -1417,6 +1417,11 @@ input.error {
 
 .header-burger {
   display: none;
+  outline: none;
+  font-size: 30px;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
 }
 
 @media (max-width: 1200px) {
@@ -1433,11 +1438,17 @@ input.error {
 }
 
 @media (max-width: 1100px) {
-  .header-nav {
+  .header {
+    padding: 10px 0;
+    margin-top: 18px;
+  }
+  .header-list {
     display: none;
   }
   .header-burger {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -1460,7 +1471,10 @@ input.error {
 
 @media (max-width: 444px) {
   .header:before {
-    height: 84px;
+    height: 74px;
+  }
+  .header__title {
+    margin-left: 70px;
   }
 }
 
@@ -2423,6 +2437,85 @@ input.error {
         -ms-flex-pack: start;
             justify-content: flex-start;
   }
+}
+
+.menu-mobile {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9999;
+  display: none;
+}
+
+.menu-mobile_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-animation: fadeIn 0.5s;
+          animation: fadeIn 0.5s;
+}
+
+.menu-block {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.menu__close {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 20px;
+  right: 15px;
+  font-size: 30px;
+  color: #ffffff;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.menu-nav {
+  width: 100%;
+  height: 100%;
+}
+
+.menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+  list-style: none;
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
+.menu-list__item {
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+}
+
+.menu-list__item a {
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px;
 }
 
 .project__hero {
