--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -38,6 +38,11 @@
         padding-bottom: 7px
   &-burger 
     display: none
+    outline: none
+    font-size: 30px
+    color: $light-color
+    background-color: transparent 
+    border: none
 
 
 @media (max-width: 1200px)
@@ -53,10 +58,12 @@
 
 @media (max-width: 1100px)
   .header 
-    &-nav 
+    padding: 10px 0
+    margin-top: 18px
+    &-list
       display: none
     &-burger 
-      display: block
+      display: flex
 
 @media (max-width: 750px)
   .header
@@ -73,4 +80,6 @@
 @media (max-width: 444px)
   .header 
     &:before
-      height: 84px
+      height: 74px
+    &__title 
+      margin-left: 70px
