--- a/css/style.css
+++ b/css/style.css
@@ -1418,10 +1418,61 @@ input.error {
 .header-burger {
   display: none;
   outline: none;
-  font-size: 30px;
-  color: #ffffff;
   background-color: transparent;
   border: none;
+}
+
+.header-burger__line {
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  position: relative;
+}
+
+.header-burger__line:before, .header-burger__line:after {
+  position: absolute;
+  left: 0;
+  content: '';
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  -webkit-transition: top 0.2s linear 0.2s, -webkit-transform 0.2s ease-in;
+  transition: top 0.2s linear 0.2s, -webkit-transform 0.2s ease-in;
+  transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+  transition: transform 0.2s ease-in, top 0.2s linear 0.2s, -webkit-transform 0.2s ease-in;
+}
+
+.header-burger__line:before {
+  top: -10px;
+}
+
+.header-burger__line:after {
+  top: 10px;
+}
+
+.header-burger__line_active {
+  background-color: transparent;
+}
+
+.header-burger__line_active:before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 0;
+  -webkit-transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, transform 0.2s ease-in 0.2s, -webkit-transform 0.2s ease-in 0.2s;
+}
+
+.header-burger__line_active:after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 0;
+  -webkit-transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, -webkit-transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+  transition: top 0.2s linear, transform 0.2s ease-in 0.2s, -webkit-transform 0.2s ease-in 0.2s;
 }
 
 @media (max-width: 1200px) {
@@ -1438,10 +1489,6 @@ input.error {
 }
 
 @media (max-width: 1100px) {
-  .header {
-    padding: 10px 0;
-    margin-top: 18px;
-  }
   .header-list {
     display: none;
   }
@@ -1470,6 +1517,9 @@ input.error {
 }
 
 @media (max-width: 444px) {
+  .header {
+    padding: 10px 0;
+  }
   .header:before {
     height: 74px;
   }
@@ -2446,8 +2496,10 @@ input.error {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: 9999;
+  z-index: 2;
   display: none;
+  -webkit-animation: fadeIn 0.5s;
+          animation: fadeIn 0.5s;
 }
 
 .menu-mobile_active {
