--- a/sass/blocks/_menu-mobile.sass
+++ b/sass/blocks/_menu-mobile.sass
@@ -6,8 +6,9 @@
     width: 100%
     height: 100%
     background-color: $dark-color
-    z-index: 9999
+    z-index: 2
     display: none
+    animation: fadeIn 0.5s
     &_active
       display: flex
       animation: fadeIn 0.5s
