Пофиксила проблема с верской в мобильной версии после планшетной

--- a/sass/blocks/_portfolio.sass
+++ b/sass/blocks/_portfolio.sass
@@ -63,27 +63,22 @@
   .portfolio 
     &-cards 
       padding-top: 10px
-      height: 3930px
-      // height: 5050px
+      height: 3700px
     &-card 
+      width: 350px
       max-width: 100%
       margin: 5px 0
 
-@media (max-width: 375px)
+@media (max-width: 414px)
   .portfolio 
     &-cards 
-      padding-top: 10px
-      height: 3570px
+      height: 3190px
     &-card 
-      max-width: 100%
-      margin: 5px 0
+      width: 300px
 
-@media (max-width: 360px)
+@media (max-width: 340px)
   .portfolio 
     &-cards 
-      height: 3430px
-
-@media (max-width: 320px)
-  .portfolio 
-    &-cards 
-      height: 3070px
+      height: 2880px
+    &-card 
+      width: 270px
