--- a/sass/blocks/_menu-mobile.sass
+++ b/sass/blocks/_menu-mobile.sass
@@ -39,7 +39,7 @@
     padding: 0
     width: 100%
     height: 100%
-    font-size: 24px
+    font-size: 40px
     list-style: none
     text-transform: uppercase
     margin-top: 0
@@ -51,3 +51,8 @@
         color: $light-color
         text-decoration: none
         padding: 10px
+
+@media (max-width: 780px)
+  .menu
+    &-list
+      font-size: 24px
