Оптимизация изображений в прогрессив jpeg

--- a/sass/blocks/_steps.sass
+++ b/sass/blocks/_steps.sass
@@ -15,7 +15,7 @@
 
 .steps 
   text-align: left
-  background-image: url("../img/steps/2.png")
+  background-image: url("../img/steps/2.jpg")
   background-position: center center
   background-size: cover
   background-attachment: fixed
