--- a/css/style.css
+++ b/css/style.css
@@ -1729,7 +1729,7 @@ input.error {
 
 .steps {
   text-align: left;
-  background-image: url("../img/steps/2.png");
+  background-image: url("../img/steps/2.jpg");
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
